samples/_failures_safe/1761701050_0b39b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0665f179.c: In function ‘main’:
./samples/SAFE/__tmp_0665f179.c:162:20: error: missing terminating " character
  162 |             printf("Invalid
      |                    ^~~~~~~~
./samples/SAFE/__tmp_0665f179.c:162:13: error: expected expression at end of input
  162 |             printf("Invalid
      |             ^~~~~~
./samples/SAFE/__tmp_0665f179.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0665f179.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0665f179.c:162:13: error: expected declaration or statement at end of input
